# forecastllm

./: .env.example  .gitignore  README.md  RESTART.md  load_M4.py  pyproject.toml
data/gasoline/: README.md
data/m4/: README.md
week6/: data_loader.py  day1.ipynb  day2.ipynb  day3.ipynb  day4.ipynb  day4_test_slice.csv  day5.ipynb  day5_test_slice.csv
week6/week6/exports/forecast_splits/: metadata.json
week7/: day1.ipynb  day2.ipynb  day3 and 4.ipynb
week8/: day1.ipynb  day2.ipynb  day3.ipynb  day4.ipynb  day5.ipynb  forecast_case.py  gasoline_loader.py  results.ipynb
