[project]
name = "forecastllm"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.9",
    "numpy>=2.3.4",
    "pandas>=3.0.2",
    "peft>=0.19.1",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "transformers>=5.6.2",
]
